--- a/packages/main/tsconfig.json
+++ b/packages/main/tsconfig.json
@@ -8,7 +8,7 @@
     "skipLibCheck": true,
     "strict": true,
     "isolatedModules": true,
-    "types": ["node"],
+    "types": ["node", "@types/web-bluetooth"],
     "baseUrl": ".",
     "paths": {
       "/@/*": ["./src/*"]
