--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -38,12 +38,15 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4
+      - uses: actions/checkout@v4
+      - uses: pnpm/action-setup@v4
+        with:
+          version: 9.9.0
       - uses: actions/setup-node@v4
         with:
-          cache: 'npm'
+          cache: 'pnpm'
 
-      - run: npm ci
+      - run: pnpm install
         env:
           PLAYWRIGHT_SKIP_BROWSER_DOWNLOAD: 1
 
@@ -54,10 +57,13 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4
+      - uses: actions/checkout@v4
+      - uses: pnpm/action-setup@v4
+        with:
+          version: 9.9.0
       - uses: actions/setup-node@v4
         with:
-          cache: 'npm'
+          cache: 'pnpm'
 
-      - run: npm i prettier
-      - run: npx prettier --check "**/*.{js,mjs,cjs,jsx,ts,mts,cts,tsx,vue}"
+      - run: pnpm i prettier
+      - run: pnpm prettier --check "**/*.{js,mjs,cjs,jsx,ts,mts,cts,tsx,vue}"
