fix workflows; format code

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -50,7 +50,7 @@ jobs:
         env:
           PLAYWRIGHT_SKIP_BROWSER_DOWNLOAD: 1
 
-      - run: npm run lint --if-present
+      - run: pnpm run lint
 
   # This job just check code style for in-template contributions.
   code-style:
@@ -66,4 +66,4 @@ jobs:
           cache: 'pnpm'
 
       - run: pnpm i prettier
-      - run: pnpm prettier --check "**/*.{js,mjs,cjs,jsx,ts,mts,cts,tsx,vue}"
+      - run: pnpm run prettier --check "**/*.{js,mjs,cjs,jsx,ts,mts,cts,tsx,vue}"
